family,financial and contact page completed

--- a/hackathon-app/src/app/main/financial-outlook/financial-page/financial-page.component.html
+++ b/hackathon-app/src/app/main/financial-outlook/financial-page/financial-page.component.html
@@ -1,1 +1,35 @@
-<p>financial-page works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 mt-5">
+           <div class="card">
+               <div class="card-header">
+                   <h1 class="text-center">Financial outlook</h1>
+               </div>
+               <div class="card-body">
+                <form>
+                    <div class="form-group">
+                      <label for="Income">Total Household Income</label>
+                      <input type="number" class="form-control" id="Income" placeholder="Income">
+                      
+                    </div>
+                    <div class="form-group">
+                      <label for="Savings">Current savings</label>
+                      <input type="number" class="form-control" id="Savings" placeholder="saving">
+                    </div>
+                    <div class="form-group">
+                        <label for="Retire">How much do you think you will need 
+                            monthly when you retire</label>
+                        <input type="number" class="form-control" id="Retire" placeholder="retire">
+                      </div>
+                      <div class="form-group">
+                        <label for="investment">What will be your monthly contribution 
+                        towards your investment plan</label>
+                        <input type="number" class="form-control" id="investment" placeholder="investment">
+                      </div>
+                    <button type="submit" class="btn btn-primary">Show me</button>
+                  </form>
+               </div>
+           </div>
+        </div>
+    </div>
+</div>
