--- a/hackathon-app/src/app/main/family/family-page/family-page.component.html
+++ b/hackathon-app/src/app/main/family/family-page/family-page.component.html
@@ -1,1 +1,29 @@
-<p>family-page works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 mt-5">
+           <div class="card">
+               <div class="card-header">
+                   <h1 class="text-center">Family</h1>
+               </div>
+               <div class="card-body">
+                <form>
+                    <div class="form-group">
+                      <label for="exampleInputText">Are you married ?</label>
+                      <input type="text" class="form-control" id="exampleInputText" placeholder="Yes/No">
+                      
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputField">How many Children do you have ?</label>
+                      <input type="number" class="form-control" id="exampleInputField" placeholder="1, 2, or 3">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInput">How old are you ?</label>
+                        <input type="number" class="form-control" id="exampleInput" placeholder="age">
+                      </div>
+                    <button type="submit" class="btn btn-primary">Next</button>
+                  </form>
+               </div>
+           </div>
+        </div>
+    </div>
+</div>
