--- a/hackathon-app/src/app/main/your-contact/contact-page/contact-page.component.html
+++ b/hackathon-app/src/app/main/your-contact/contact-page/contact-page.component.html
@@ -1,1 +1,24 @@
-<p>contact-page works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 mt-5">
+           <div class="card">
+               <div class="card-header">
+                   <h1 class="text-center">Your Contact</h1>
+               </div>
+               <div class="card-body">
+                <form>
+                    <div class="form-group">
+                      <label for="InputEmail">Email address</label>
+                      <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                      <label for="Phone">Phone No</label>
+                      <input type="number" class="form-control" id="Phone" placeholder="Phone">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Show me</button>
+                  </form>
+               </div>
+           </div>
+        </div>
+    </div>
+</div>
