About Page Desing

--- a/hackathon-app/src/app/main/about-you/about-page/about-page.component.html
+++ b/hackathon-app/src/app/main/about-you/about-page/about-page.component.html
@@ -1,1 +1,29 @@
-<p>about-page works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 mt-5">
+           <div class="card">
+               <div class="card-header">
+                   <h1 class="text-center">About Yourself</h1>
+               </div>
+               <div class="card-body">
+                <form>
+                    <div class="form-group">
+                      <label for="exampleInputText">What's Your Age ?</label>
+                      <input type="text" class="form-control" id="exampleInputText" placeholder="Enter Your Age">
+                      
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputField">When Do You Want To Retire ?</label>
+                      <input type="number" class="form-control" id="exampleInputField" placeholder="Enter In Years">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInput">Tell Us How Much You Earn Monthly ?</label>
+                        <input type="number" class="form-control" id="exampleInput" placeholder="Your Monthly Salary">
+                      </div>
+                    <button type="submit" class="btn btn-primary">Next</button>
+                  </form>
+               </div>
+           </div>
+        </div>
+    </div>
+</div>
