Added CSS and navigations between pages

--- a/hackathon-app/src/app/main/family/family-page/family-page.component.html
+++ b/hackathon-app/src/app/main/family/family-page/family-page.component.html
@@ -20,7 +20,10 @@
                         <label for="exampleInput">How old are you ?</label>
                         <input type="number" class="form-control" id="exampleInput" placeholder="age">
                       </div>
-                    <button type="submit" class="btn btn-primary">Next</button>
+                      
+                      <a routerLink="/about"><button class="btn-previous" > Previoius </button></a>
+                      <a routerLink="/financial"><button class="btn-primary" > Next </button></a>
+                     
                   </form>
                </div>
            </div>
