--- a/hackathon-app/src/app/main/financial-outlook/financial-page/financial-page.component.html
+++ b/hackathon-app/src/app/main/financial-outlook/financial-page/financial-page.component.html
@@ -26,7 +26,10 @@
                         towards your investment plan</label>
                         <input type="number" class="form-control" id="investment" placeholder="investment">
                       </div>
-                    <button type="submit" class="btn btn-primary">Show me</button>
+
+                      <a routerLink="/family"><button class="btn-previous" > Previoius </button></a>
+                      <a routerLink="/contact"><button class="btn-primary" > Next </button></a>
+                      
                   </form>
                </div>
            </div>
