--- a/hackathon-app/src/app/main/your-contact/contact-page/contact-page.component.html
+++ b/hackathon-app/src/app/main/your-contact/contact-page/contact-page.component.html
@@ -15,7 +15,10 @@
                       <label for="Phone">Phone No</label>
                       <input type="number" class="form-control" id="Phone" placeholder="Phone">
                     </div>
-                    <button type="submit" class="btn btn-primary">Show me</button>
+
+                    <a routerLink="/financial"><button class="btn-previous" > Previoius </button></a>
+                    <button type="submit" class="btn-primary">Show me</button>
+                    
                   </form>
                </div>
            </div>
