--- a/hackathon-app/src/app/main/about-you/about-page/about-page.component.html
+++ b/hackathon-app/src/app/main/about-you/about-page/about-page.component.html
@@ -9,7 +9,7 @@
                 <form>
                     <div class="form-group">
                       <label for="exampleInputText">What's Your Age ?</label>
-                      <input type="text" class="form-control" id="exampleInputText" placeholder="Enter Your Age">
+                      <input type="number" class="form-control" id="exampleInputText" placeholder="Enter Your Age">
                       
                     </div>
                     <div class="form-group">
@@ -20,7 +20,7 @@
                         <label for="exampleInput">Tell Us How Much You Earn Monthly ?</label>
                         <input type="number" class="form-control" id="exampleInput" placeholder="Your Monthly Salary">
                       </div>
-                    <button type="submit" class="btn btn-primary">Next</button>
+                       <a routerLink="/family"><button class="btn-primary" > Next </button></a>
                   </form>
                </div>
            </div>
