--- a/hackathon-app/src/app/main/financial-outlook/financial-page/financial-page.component.html
+++ b/hackathon-app/src/app/main/financial-outlook/financial-page/financial-page.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3 mt-5">
+        <div class="col-md-6 offset-md-3">
+          <img src="../../../../assets/financial-outlook.jpg" style="width: 100%;">
            <div class="card">
                <div class="card-header">
                    <h1 class="text-center">Financial outlook</h1>
