--- a/hackathon-app/src/app/main/about-you/about-page/about-page.component.html
+++ b/hackathon-app/src/app/main/about-you/about-page/about-page.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3 mt-5">
+        <div class="col-md-6 offset-md-3">
+          <h1 class="text-center">AR RETIREMENT
+            PLAN GAMIFIED APP</h1>
+          <img src="../../../../assets/aboutpage.jpg" style="width: 100%;">
            <div class="card">
                <div class="card-header">
                    <h1 class="text-center">About Yourself</h1>
