--- a/hackathon-app/src/app/main/family/family-page/family-page.component.html
+++ b/hackathon-app/src/app/main/family/family-page/family-page.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3 mt-5">
+        <div class="col-md-6 offset-md-3">
+            <img src="../../../../assets/family.jpg" style="width: 100%;">
            <div class="card">
                <div class="card-header">
                    <h1 class="text-center">Family</h1>
@@ -21,7 +22,7 @@
                         <input type="number" class="form-control" id="exampleInput" placeholder="age">
                       </div>
                       
-                      <a routerLink="/about"><button class="btn-previous" > Previoius </button></a>
+                      <a routerLink=""><button class="btn-previous" > Previoius </button></a>
                       <a routerLink="/financial"><button class="btn-primary" > Next </button></a>
                      
                   </form>
