some changes done

--- a/hackathon-app/src/app/main/about-you/about-page/about-page.component.html
+++ b/hackathon-app/src/app/main/about-you/about-page/about-page.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <h1 class="tex-center">AR RETIREMENT
-        PLAN GAMIFIED APP</h1>
+    <div class="col-md-6 offset-md-3 p-0 mt-0">
+      <h2 class="text-center">AR RETIREMENT
+        PLAN</h2>
       <img src="../../../../assets/aboutpage.jpg" style="width: 100%;">
       <div class="card">
         <div class="card-header">
