--- a/hackathon-app/src/app/main/family/family-page/family-page.component.css
+++ b/hackathon-app/src/app/main/family/family-page/family-page.component.css
@@ -1,7 +1,11 @@
 
   .container {  
       padding: 50px;  
-    background-color: lightblue;  
+    background-color: lightblue;
+    background-color: rgb(255, 255, 255);
+border-radius: 10px;
+box-shadow: rgb(59 59 59 / 5%) 0px 5px 15px 0;
+padding: 40px;  
   }  
   
   .btn-primary {
