--- a/hackathon-app/src/app/main/your-contact/contact-page/contact-page.component.css
+++ b/hackathon-app/src/app/main/your-contact/contact-page/contact-page.component.css
@@ -2,6 +2,10 @@
   .container {  
     padding: 50px;  
   background-color: lightblue;  
+  background-color: rgb(255, 255, 255);
+border-radius: 10px;
+box-shadow: rgb(59 59 59 / 5%) 0px 5px 15px 0;
+padding: 40px;
 }  
 
 .btn-primary {
